# nix-fetchers

./: .travis.yml  LICENSE  README.md  all-fetchers.nix  make-extra-builtins.nix
fetch-git/: README.md  build.nix  run.nix
fetch-git/src/: archives.py  command.py  fetch-git.py  lock.py  log.py  nixerrors.py  paths.py  repository.py  setup.cfg  setup.py
fetch-git/src/fetchgit/: archives.py  arguments.py  command.py  fetchgit.py  lock.py  log.py  repository.py
fetch-git/tests/: annotated-tag.nix  default.nix  fetch-branch.nix  fetch-middle-commit.nix  fetch-specify-name.nix  fetch-tag.nix  filter-source.nix  lib.nix
fetch-pypi-hash/: README.md  build.nix  fetch-pypi-hash  run.nix
test/: default.nix  run
