[metadata]
name = target-nix-fetchers-fetch-git
version = 1.0.0
author = Graham Christensen
author_email = graham.christensen@target.com
url = https://github.com/target/nix-fetchers
description = Fetch git repositories quickly.
keywords = nix, git
classifiers =
  License :: OSI Approved :: MIT License

[options]
packages = fetchgit
py_modules = fetchgit

[options.entry_points]
console_scripts =
  fetch-git = fetchgit.fetchgit:main